add ej 12 item 2 guia 5

--- a/5-guia/ejercicios-5/ej-10-5.tex
+++ b/5-guia/ejercicios-5/ej-10-5.tex
@@ -88,3 +88,8 @@
 
         \item Quebrando se ve que es \textit{compatible}. \red{DESARROLLAR}
 \end{enumerate}
+
+
+\begin{aportes}
+	\item \aporte{\dirRepo}{naD GarRaz \github}
+\end{aportes}
