--- a/macros/definiciones.tex
+++ b/macros/definiciones.tex
@@ -100,8 +100,8 @@
 \newcommand{\hacer}{
   {\color{red!80!black}{\faIcon{flushed}... hay que hacerlo! \faIcon{sad-cry}}}\par
   {\color{black!70!white}
-    \small Si querés mandarlo: Telegram $\to$ \href{\dirTelegram}{\small\telegram},
-    o  mejor aún si querés subirlo en \LaTeX $\to$ \href{\dirRepo}{\small \github}.
+    \small Si querés mandá la solución $\to$ \href{\dirTelegram}{\blue{al grupo de Telegram}  \small\telegram},
+    o  mejor aún si querés subirlo en \LaTeX $\to$ \href{\dirRepo}{una \textit{pull request} al \small \github}.
   }\par
 }
 
