--- a/macros/definiciones.tex
+++ b/macros/definiciones.tex
@@ -98,9 +98,9 @@
 \def\ot{\leftarrow}
 \newcommand{\estabien}{{\color{blue} Consultado, está bien. \checkmark}}
 \newcommand{\hacer}{
-  {\color{red!80!black}{\faIcon{flushed}... hay que hacerlo! \faIcon{sad-cry}}}\par
+  {\color{red!80!black}{\tiny\faIcon{flushed}... hay que hacerlo! \faIcon{sad-cry}}}\par
   {\color{black!70!white}
-    \small Si querés mandá la solución $\to$ \href{\dirTelegram}{\blue{al grupo de Telegram}  \small\telegram},
+    \tiny Si querés mandá la solución $\to$ \href{\dirTelegram}{\blue{al grupo de Telegram}  \small\telegram},
     o  mejor aún si querés subirlo en \LaTeX $\to$ \href{\dirRepo}{una \textit{pull request} al \small \github}.
   }\par
 }
