fix 36 guia 1. Agrego aportes

--- a/1-guia/ejercicios-1/ej-36-1.tex
+++ b/1-guia/ejercicios-1/ej-36-1.tex
@@ -81,7 +81,7 @@ La $f$ específica la pinto: $\blue{f}$
           \item[\textit{Antisimétrica}:] Quiero ver que:
                 $$
                   \begin{array}{c}
-                    \paratodo g, h \en \F,\quad  \text{si } g \relacion h \ytext g \distinto h \entonces g \norelacion h
+                    \paratodo g, h \en \F,\quad  \text{si } g \relacion h \ytext g \distinto h \entonces h \norelacion g
                   \end{array}
                 $$
 
