--- a/5-guia/ejercicios-5/ej-3-5.tex
+++ b/5-guia/ejercicios-5/ej-3-5.tex
@@ -30,5 +30,5 @@ $$
 
 \begin{aportes}
   \item \aporte{\dirRepo}{naD GarRaz}
-  \item \aporte{https://github.com/APNieto/}{Ale Nieto \github}
+  \item \aporte{https://github.com/rlgarro}{Román LG \github}
 \end{aportes}
