--- a/macros/preamble-general.tex
+++ b/macros/preamble-general.tex
@@ -62,7 +62,7 @@
     refcolor=magenta,
     linkcolor=blue!80!red,
     filecolor=green,
-    urlcolor=red!70!white,
+    urlcolor=red!10!purple,
     }
 \urlstyle{same}
 
