--- a/6-guia/ejercicios-6/ej-6-6.tex
+++ b/6-guia/ejercicios-6/ej-6-6.tex
@@ -15,7 +15,6 @@
           \left(\frac{1 + \sqrt{3} i }{(1 - i)}\cdot \frac{1+i}{1+i} \right)^{17} =
           \left( \frac{(1 + \sqrt{3} i) \cdot (1+i) }{2} \right)^{17} =
           \left( \frac{1 - \sqrt{3}}{2} + \frac{1+\sqrt{3}}{2}i \right)^{17}
-          \\
         $$
         Ahora paso eso a notación exponencial y acomodo usando propiedades de exponentes:
         $$
@@ -96,5 +95,5 @@
 \end{enumerate}
 
 \begin{aportes}
-  \item \aporte{\dirRepo}{Nad Garraz \github}
+  \item \aporte{\dirRepo}{naD GarRaz \github}
 \end{aportes}
