--- a/6-guia/teoria-6/teoria-6.tex
+++ b/6-guia/teoria-6/teoria-6.tex
@@ -26,17 +26,17 @@
             \draw[red,thick] (0,0) -- (1,0);
             \draw[thin] (1,0) arc (0:90:1);
 
-            \draw[orange,thick] (0,0) -- ({sqrt(3)/2},{1/2});
-            \draw[orange,dotted] ({sqrt(3)/2},0) -- ({sqrt(3)/2},{1/2});
-            \draw[orange,dotted] (0,{1/2}) -- ({sqrt(3)/2},{1/2});
+            \draw[orange,thick] (0,0) -- ({sqrt(3)/2},0.5);
+            \draw[orange,dotted] ({sqrt(3)/2},0) -- ({sqrt(3)/2},0.5);
+            \draw[orange,dotted] (0,0.5) -- ({sqrt(3)/2},0.5);
 
             \draw[OliveGreen,thick] (0,0) -- ({1/sqrt(2)},{1/sqrt(2)});
             \draw[OliveGreen,dotted] ({1/sqrt(2)},0) -- ({1/sqrt(2)},{1/sqrt(2)});
             \draw[OliveGreen,dotted] (0,{1/sqrt(2)}) -- ({1/sqrt(2)},{1/sqrt(2)});
 
-            \draw[blue,thick] (0,0) -- ({1/2},{sqrt(3)/2});
-            \draw[blue,dotted] ({1/2},0) -- ({1/2},{sqrt(3)/2});
-            \draw[blue,dotted] (0,{sqrt(3)/2}) -- ({1/2},{sqrt(3)/2});
+            \draw[blue,thick] (0,0) -- (0.5,{sqrt(3)/2});
+            \draw[blue,dotted] (0.5,0) -- (0.5,{sqrt(3)/2});
+            \draw[blue,dotted] (0,{sqrt(3)/2}) -- (0.5,{sqrt(3)/2});
 
             \draw[purple,thick] (0,0) -- (0,1);
 
@@ -47,9 +47,9 @@
             \node[purple] at (0.15,0.8) {$\frac{\pi}{2}$};
 
             \node[below] at (1,0) {$1$};
-            \node[right] at ({sqrt(3)/2},{1/2}) {$\frac{\sqrt{3}}{2} + \frac{1}{2}i$};
+            \node[right] at ({sqrt(3)/2},0.5) {$\frac{\sqrt{3}}{2} + \frac{1}{2}i$};
             \node[right] at ({1/sqrt(2)},{1/sqrt(2)}) {$\frac{\sqrt{2}}{2} + \frac{\sqrt{2}}{2}i$};
-            \node[above right] at ({1/2},{sqrt(3)/2}) {$\frac{1}{2} + \frac{\sqrt{3}}{2}i$};
+            \node[above right] at (0.5,{sqrt(3)/2}) {$\frac{1}{2} + \frac{\sqrt{3}}{2}i$};
             \node[left] at (0,1) {$i$};
           \end{tikzpicture}
         \end{minipage}
