actualizo nombre en aportes

--- a/6-guia/ejercicios-6-extra/ej-extra-1-6.tex
+++ b/6-guia/ejercicios-6-extra/ej-extra-1-6.tex
@@ -21,6 +21,6 @@ $$
 \begin{aportes}
   %% iconos : \github, \instagram, \tiktok, \linkedin
   %\aporte{url}{nombre icono}
-  \item \aporte{\dirRepo}{Nad Garraz \github}
+  \item \aporte{\dirRepo}{naD GarRaz \github}
   \item \aporte{https://github.com/JowinTeran}{Ale Teran \github}
 \end{aportes}
