--- a/6-guia/ejercicios-6-extra/ej-extra-5-6.tex
+++ b/6-guia/ejercicios-6-extra/ej-extra-5-6.tex
@@ -77,5 +77,5 @@
 \end{enumerate}
 
 \begin{aportes}
-  \item \aporte{https://github.com/nad-garraz}{Nad Garraz \github}
+  \item \aporte{https://github.com/nad-garraz}{naD GarRaz \github}
 \end{aportes}
