--- a/6-guia/ejercicios-6/ej-3-6.tex
+++ b/6-guia/ejercicios-6/ej-3-6.tex
@@ -163,6 +163,6 @@
         \begin{aportes}
           %% iconos : \github, \instagram, \tiktok, \linkedin
           %\aporte{url}{nombre icono}
-          \item \aporte{\dirRepo}{Nad Garraz \github}
+          \item \aporte{\dirRepo}{naD GarRaz \github}
         \end{aportes}
 \end{enumerate}
