--- a/6-guia/ejercicios-6/ej-4-6.tex
+++ b/6-guia/ejercicios-6/ej-4-6.tex
@@ -173,5 +173,5 @@
 \end{enumerate}
 
 \begin{aportes}
-  \item \aporte{\dirRepo}{Nad Garraz \github}
+  \item \aporte{\dirRepo}{naD GarRaz \github}
 \end{aportes}
