--- a/6-guia/ejercicios-6/ej-7-6.tex
+++ b/6-guia/ejercicios-6/ej-7-6.tex
@@ -137,5 +137,5 @@
 
 % Contribuciones
 \begin{aportes}
-  \item \aporte{https://github.com/nad-garraz}{Nad Garraz \github}
+  \item \aporte{https://github.com/nad-garraz}{naD GarRaz \github}
 \end{aportes}
