--- a/6-guia/ejercicios-6/ej-1-6.tex
+++ b/6-guia/ejercicios-6/ej-1-6.tex
@@ -169,5 +169,5 @@ $$
 \begin{aportes}
   %% iconos : \github, \instagram, \tiktok, \linkedin
   %\aporte{url}{nombre icono}
-  \item \aporte{\dirRepo}{Nad Garraz \github}
+  \item \aporte{\dirRepo}{naD GarRaz \github}
 \end{aportes}
