--- a/6-guia/ejercicios-6/ej-9-6.tex
+++ b/6-guia/ejercicios-6/ej-9-6.tex
@@ -56,5 +56,5 @@ $$
 \begin{aportes}
   %% iconos : \github, \instagram, \tiktok, \linkedin
   %\aporte{url}{nombre icono}
-  \item \aporte{https://github.com/nad-garraz}{Nad Garraz \github}
+  \item \aporte{https://github.com/nad-garraz}{naD GarRaz \github}
 \end{aportes}
