Remastering ejercicio guia 6

--- a/6-guia/ejercicios-6-extra/ej-extra-3-6.tex
+++ b/6-guia/ejercicios-6-extra/ej-extra-3-6.tex
@@ -8,8 +8,8 @@
 \end{enunciado}
 
 $\llave{l}{
-  |z| = 1 \\
-  \theta_z = \frac{11}{6}\pi
+    |z| = 1 \\
+    \theta_z = \frac{11}{6}\pi
   }
   \to z = |z|e^{\theta_z i} =
   e^{i\frac{11}{6}\pi}
@@ -58,20 +58,20 @@ $\par
 $
   \flecha{junto info}[\href{\chinito}{T\faIcon{cannabis}R}]
   \llave{l}{
-  \congruencia{n}{9}{12} \\
-  \congruencia{n}{5}{8}
+    \congruencia{n}{9}{12} \\
+    \congruencia{n}{5}{8}
   }
   \Sii{quiero}[\textit{divisores coprimos}]
   \llave{l}{
-  \congruencia{n}{1}{4} \blue{\Tilde}                 \\
-  \congruencia{n}{0}{3}                               \\
-  \congruencia{n}{1}{4} \magenta{\Tilde}\blue{\Tilde} \\
-  \congruencia{n}{1}{2} \magenta{\Tilde}
+    \congruencia{n}{1}{4} \blue{\Tilde}                 \\
+    \congruencia{n}{0}{3}                               \\
+    \congruencia{n}{1}{4} \magenta{\Tilde}\blue{\Tilde} \\
+    \congruencia{n}{1}{2} \magenta{\Tilde}
   }
   \Sii{me quedo con el}[de mayor divisor]
   \llave{l}{
-  \congruencia{n}{0}{3} \llamada1 \\
-  \congruencia{n}{5}{8} \llamada2 \\
+    \congruencia{n}{0}{3} \llamada1 \\
+    \congruencia{n}{5}{8} \llamada2 \\
   }
 $
 \par
@@ -93,3 +93,7 @@ $
   \sii
   \boxed{\congruencia{n}{21}{24}} \Tilde
 $
+
+\begin{aportes}
+  \item \aporte{\dirRepo}{naD GarRaz \github}
+\end{aportes}
