--- a/6-guia/ejercicios-6-extra/ej-extra-2-6.tex
+++ b/6-guia/ejercicios-6-extra/ej-extra-2-6.tex
@@ -7,8 +7,8 @@
 Voy a usar que:
 $
   \llave{l}{
-  w \en G_n \entonces \sumatoria{k=0}{n-1} w^k = 0 \\
-  \text{Si } m \divideA n \entonces G_m \subseteq G_n
+    w \en G_n \entonces \sumatoria{k=0}{n-1} w^k = 0 \\
+    \text{Si } m \divideA n \entonces G_m \subseteq G_n
   }
 $
 
@@ -48,57 +48,62 @@ $ \par
 
 Si
 $\llave{rl}{
-  w \en G_7          & \entonces w^7 = 1  \\
-  w \en G_{14} - G_7 & \entonces w^7 = -1
+    w \en G_7          & \entonces w^7 = 1  \\
+    w \en G_{14} - G_7 & \entonces w^7 = -1
   }
 $
 
 $$
   \llave{ccl}{
-  w \en G_7          & \to & \magenta{1} + 1 = 2 \Tilde  \\
-  w \en G_{14} - G_7 & \to & \magenta{-1} + 1 = 0 \Tilde
+    w \en G_7          & \to & \magenta{1} + 1 = 2 \Tilde  \\
+    w \en G_{14} - G_7 & \to & \magenta{-1} + 1 = 0 \Tilde
   }
-$$\par
+$$
 
-\centering
+$$
+  \begin{tikzpicture}[baseline=0,scale = 2.3, every node/.style={font=\tiny}]
+    \draw[ultra thin,->,gray] (-1.5,0) -- (1.7,0) node[below] {Re};
+    \draw[ultra thin,->,gray] (0,-1.5) -- (0,1.7) node[right] {Im};
+    \draw[ultra thin] (0,0) circle (1);
+    \node at (-1,1.5)  {$G_7 \subseteq G_{14}$};
+    \foreach \x in {0,...,14} {
+        \filldraw (\x*360/14:1) circle (0.5pt);
+        \ifnum\x<14
+          \draw[OliveGreen] (\x*360/14:1) -- ({(\x+1)*360/14}:1);
+          \ifnum\x>0
+            \filldraw (\x*360/14:1.3) node { $e^{i\frac{2\pi}{14}\x}$};
+          \fi
+        \fi
+        \ifnum\x<7
+          \filldraw (\x*360/7:0.8) node { $e^{i\frac{2\pi}{7}\x}$};
+          \draw[magenta] (\x*360/7:1) -- ({(\x+1)*360/7}:1);
+        \fi
+      }
+  \end{tikzpicture}
+  \begin{tikzpicture}[baseline=0,scale = 2.3, every node/.style={font=\tiny}]
+    \draw[ultra thin,->,gray] (-1.5,0) -- (1.7,0) node[below] {Re};
+    \draw[ultra thin,->,gray] (0,-1.5) -- (0,1.7) node[right] {Im};
+    \draw[ultra thin] (0,0) circle (1);
+    \node at (-1,1.5)  {$G_{14} - G_7 \subseteq G_{14}$};
+    \foreach \x in {0,...,14} {
+        \filldraw (\x*360/14:1) circle (0.5pt);
+        \ifnum\x<14
+          \draw[OliveGreen] (\x*360/14:1) -- ({(\x+1)*360/14}:1);
+          \ifnum\x>0
+            \filldraw (\x*360/14:1.3) node { $e^{i\frac{2\pi}{14}\x}$};
+          \fi
+        \fi
+        \ifnum\x<7
+          \draw[cyan] ({\x*360/7+360/14}:1) -- ({(\x+1)*360/7+360/14}:1);
+          % \ifnum\x>0
+          \filldraw ({\x*360/7 - 360/14}:0.8) node { $e^{i\frac{\pi}{7}\pgfmathparse{2*\x-1}\pgfmathresult}$ };
+          % \fi
+        \fi
+      }
+  \end{tikzpicture}
+$$
 
-\begin{tikzpicture}[baseline=0,scale = 2.3, every node/.style={font=\tiny}]
-  \draw[ultra thin,->,gray] (-1.5,0) -- (1.7,0) node[below] {Re};
-  \draw[ultra thin,->,gray] (0,-1.5) -- (0,1.7) node[right] {Im};
-  \draw[ultra thin] (0,0) circle (1);
-  \node at (-1,1.5)  {$G_7 \subseteq G_{14}$};
-  \foreach \x in {0,...,14} {
-      \filldraw (\x*360/14:1) circle (0.5pt);
-      \ifnum\x<14
-        \draw[OliveGreen] (\x*360/14:1) -- ({(\x+1)*360/14}:1);
-        \ifnum\x>0
-          \filldraw (\x*360/14:1.3) node { $e^{i\frac{2\pi}{14}\x}$};
-        \fi
-      \fi
-      \ifnum\x<7
-        \filldraw (\x*360/7:0.8) node { $e^{i\frac{2\pi}{7}\x}$};
-        \draw[magenta] (\x*360/7:1) -- ({(\x+1)*360/7}:1);
-      \fi
-    }
-\end{tikzpicture}
-\begin{tikzpicture}[baseline=0,scale = 2.3, every node/.style={font=\tiny}]
-  \draw[ultra thin,->,gray] (-1.5,0) -- (1.7,0) node[below] {Re};
-  \draw[ultra thin,->,gray] (0,-1.5) -- (0,1.7) node[right] {Im};
-  \draw[ultra thin] (0,0) circle (1);
-  \node at (-1,1.5)  {$G_{14} - G_7 \subseteq G_{14}$};
-  \foreach \x in {0,...,14} {
-      \filldraw (\x*360/14:1) circle (0.5pt);
-      \ifnum\x<14
-        \draw[OliveGreen] (\x*360/14:1) -- ({(\x+1)*360/14}:1);
-        \ifnum\x>0
-          \filldraw (\x*360/14:1.3) node { $e^{i\frac{2\pi}{14}\x}$};
-        \fi
-      \fi
-      \ifnum\x<7
-        \draw[cyan] ({\x*360/7+360/14}:1) -- ({(\x+1)*360/7+360/14}:1);
-        % \ifnum\x>0
-        \filldraw ({\x*360/7 - 360/14}:0.8) node { $e^{i\frac{\pi}{7}\pgfmathparse{2*\x-1}\pgfmathresult}$ };
-        % \fi
-      \fi
-    }
-\end{tikzpicture}\\
+\begin{aportes}
+  \item \aporte{\dirRepo}{naD GarRaz \github}
+\end{aportes}
+
