--- a/6-guia/ejercicios-6/ej-12-6.tex
+++ b/6-guia/ejercicios-6/ej-12-6.tex
@@ -1,31 +1,40 @@
 \begin{enunciado}{\ejercicio}
-    \begin{enumerate}[label=\alph*)]
-      \item Sea $w \en G_{36}$, $w^4 \distinto 1.$ Calcular $\sumatoria{k=7}{60}w^{4k}$
-      \item Sea $w \en G_{11}$, $w \distinto 1$. Calcular $\re\parentesis{\sumatoria{k=0}{60}w^k}$.
-    \end{enumerate}
+  \begin{enumerate}[label=\alph*)]
+    \item Sea $w \en G_{36}$, $w^4 \distinto 1.$ Calcular $\sumatoria{k=7}{60}w^{4k}$
+    \item Sea $w \en G_{11}$, $w \distinto 1$. Calcular $\re\parentesis{\sumatoria{k=0}{60}w^k}$.
+  \end{enumerate}
 \end{enunciado}
 
 \begin{enumerate}[label=\alph*)]
-  \item Sea $w \en G_{36}$, $w^4 \distinto 1.$ Calcular $\sumatoria{k=7}{60}w^{4k}$
+  \item Sea $w \en G_{36}$, $w^4 \distinto 1.$ Calcular $\sumatoria{k=7}{60}w^{4k}$.
 
-        Sé que si $w \en G_{36} \entonces
+        Sé que si $w \en G_{36}$ ocurren:
+        $$
           \llave{l}{
-            w^{36} = 1 \\
+            w^{36} = 1 \llamada1\\
             \sumatoria{k = 0}{35} w^k = 0
-          }$\par
-        Como $w^4 \distinto 1$ sé que $w \distinto \pm1$. Si no tendría que considerar casos particulares para la suma.\par
+          }
+        $$
 
-        Si
-        $\sumatoria{k = 7}{60}w^{4k} =
-          \ub{\sumatoria{k = 7}{60}w^{4k} + \magenta{\sumatoria{k = 0}{6}w^{4k}}}{\sumatoria{k=0}{60}w^{4k}}
-          - \magenta{\sumatoria{k = 0}{6}w^{4k}} =
-          \sumatoria{k = 0}{60}w^{4k} - \sumatoria{k=0}{6}w^{4k} =
-          \frac{(w^4)^{61} - 1}{w^4 - 1} - \frac{(w^4)^7 - 1}{w^4 - 1} =
-          \frac{(w^4)^{61} - (w^4)^7 }{w^4 - 1}\\
-          \flecha{$61 = 9\cdot6 + 7 $}[$w^36 = 1$]
-          \frac{(\ob{ \scriptstyle w^{36}}{=1})^6  \cdot (w^4)^7 - (w^4)^7 }{w^4 - 1}
-          \to$
-        \boxed{\sumatoria{k=7}{60} w^{4k} = 0}
+        Como $w^4 \distinto 1 \entonces w \distinto \pm1$. Si no tendría que considerar casos particulares para la suma.
+
+        Acomodo un poco la sumatoria, agregando los valores que faltan entre 0 y 7:
+        $$
+          \begin{array}{c}
+            \sumatoria{k = 7}{60}w^{4k} =
+            \ub{\sumatoria{k = 7}{60}w^{4k} + \magenta{\sumatoria{k = 0}{6}w^{4k}}}{\sumatoria{k=0}{60}w^{4k}}
+            - \magenta{\sumatoria{k = 0}{6}w^{4k}} =
+            \sumatoria{k = 0}{60}w^{4k} - \sumatoria{k=0}{6}w^{4k} = \\
+            \frac{(w^4)^{61} - 1}{w^4 - 1} - \frac{(w^4)^7 - 1}{w^4 - 1} =
+            \frac{(w^4)^{61} - (w^4)^7 }{w^4 - 1}
+            \Sii{$61 = 9\cdot6 + 7 $}[$\llamada1$]
+            \frac{ (w^{36})^6  \cdot (w^4)^7 - (w^4)^7 }{w^4 - 1} = 0
+          \end{array}
+        $$
+        Se concluye que:
+        $$
+          \cajaResultado{\sumatoria{k=7}{60} w^{4k} = 0}
+        $$
 
   \item Sea $w \en G_{11}$,
         $w \distinto 1$.
@@ -60,3 +69,7 @@
           \frac{\ob{\scriptstyle w^0}{1}}{2} + \frac{\ob{\scriptstyle\sumatoria{k=0}{10} w^k}{= 0}}{2} = \frac{1}{2}
         $
 \end{enumerate}
+
+\begin{aportes}
+  \item \aporte{\dirRepo}{naD GarRaz \github}
+\end{aportes}
